--- a/game/index.html
+++ b/game/index.html
@@ -1,145 +1,39 @@
-﻿<html>
+﻿<html lang="ru">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimeZero. online игра нового поколения</title>
-    <link rel="stylesheet" type="text/css" href="css/common.css"/>
-    <link rel="stylesheet" type="text/css" href="css/skin.css"/>
-    <link rel="stylesheet" type="text/css" href="/custom.css"/>
-    <script type="text/javascript" src="js/swfobject.js"></script>
-    <script type="text/javascript" src="js/lng/lng.ru.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/tz.js"></script>
-    <script type="text/javascript" src="js/cb.js"></script>
-    <script type="text/javascript" src="js/c2.js"></script>
+    <link rel="stylesheet" href="client.css">
 </head>
-<body oncontextmenu="return OpenMenu(event);" scroll="no">
-
-<div id="layot">
-
-    <table class="main-container">
-        <tr>
-            <td colspan="2" id="tz-flash-container">
-                <div class="overflow-container" id="tz-flash">
-                    <embed id="tz" width="1004" height="440" flashvars="language=ru" allowscriptaccess="always"
-                           swliveconnect="true" quality="best" bgcolor="#333333" src="tz.swf?vers=59" name="tz"
-                           type="application/x-shockwave-flash"/>
-                    <script type="text/javascript">
-                        var so = new SWFObject("tz.swf?vers=" + vers, "tz", "1004", "440", "8", "#333333");
-                        so.addParam("swLiveConnect", "true");
-                        so.addParam("allowScriptAccess", "always");
-                        so.addVariable("language", lang);
-                        so.addVariable("WORLD_ID", 1);
-
-                        if (document.URL.indexOf("reg=1") != -1) {
-                            so.addVariable("regscreen", "1");
-                        }
-
-                        if (reg_url && reg_url['login'] && reg_url['password']) {
-                            so.addVariable("root_login", reg_url['login']);
-                            so.addVariable("root_password", reg_url['password']);
-                        }
-
-                        var mpop = GetCookie("Mpop");
-                        if (mpop) {
-                            so.addVariable("Mpop", mpop);
-                        }
-
-                        so.write("tz-flash");
-
-                        document.addEventListener('visibilitychange', function () {
-                            if (!document.hidden) {
-                                document.querySelector('html').style.width = "99.9%";
-
-                                setTimeout(function () {
-                                    document.querySelector('html').style.width = "100%";
-                                }, 1000);
-                            }
-                        });
-
-						function recieveFromFlash2(data) {
-							console.log(data);
-							var command = data[0];
-							if (command == "restart_client") {
-								tz.src += '';
-							}
-						}
-                        var old_init = recieveFromFlash;
-
-                        recieveFromFlash = function () {
-							old_init.apply(this, arguments);
-							recieveFromFlash2.apply(this, arguments);
-                        };
-
-                        function autologin(login, password) {
-                            console.log(login);
-                            console.log(password);
-                        }
-
-                    </script>
-                    <script>
-                        const customTitlebar = require('custom-electron-titlebar');
-
-                        new customTitlebar.Titlebar({
-                            backgroundColor: customTitlebar.Color.fromHex('#333'),
-                            overflow: "hidden",
-                            shadow: true,
-                        });
-                    </script>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td id="chat1-container">
-                <div class="overflow-container" id="chat1">&#160;</div>
-            </td>
-            <td rowspan="2" id="chat-list-container">
-                <div class="overflow-container" id="chat-list">&#160;</div>
-            </td>
-        </tr>
-        <tr>
-            <td id="chat2-container">
-                <div class="overflow-container" id="chat2">&#160;</div>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" id="cmd">
-                <form id="F1" onsubmit="return subm();" style="visibility:hidden;">
-                    <table>
-                        <tr alt="" title="">
-                            <td><img src="i/b___scan_0.gif" class="imgh" id="b___scan" onclick="show_scans()" width="34"
-                                     height="32"/></td>
-                            <td width="100%"><input type="text" class="field" name="text" maxlength="240" size="80"
-                                                    height="32"/></td>
-                            <td class="icons"><input type="image" src="i/b___ok.gif" width="49" height="32" id="b___ok"
-                                                     onfocus="blur()"/>
-                                <img src="i/b___break.gif" width="6" height="32"/>
-                                <img src="i/b___smile.gif" width="41" height="32" id="b___smile" onclick="smiles()"/>
-                                <img src="i/b___clear.gif" width="40" height="32" id="b___clear" onclick="clearc()"/>
-                                <img src="i/b___filter.gif" width="40" height="32" id="b___filter"
-                                     onclick="sw_filter()"/>
-                                <img src="i/b___translit_off.gif" width="40" height="32" id="b___translit"
-                                     onclick="sw_translit()"/>
-                                <img src="i/b___cmd.gif" width="40" height="32" id="b___cmd" onclick="cmd()"/>
-                                <img src="i/b___sort.gif" width="41" height="32" id="b___sort" onclick="sw_sort()"/>
-                                <img src="i/b___break.gif" width="6" height="32"/>
-                                <img src="i/exit.gif" width="49" height="32" id="b__exit" onclick="do_exit()"/>
-                                <img src="i/b___r.gif" width="12" height="32"/>
-                            </td>
-                        </tr>
-                    </table>
-                </form>
-            </td>
-        </tr>
-    </table>
-
-    <script type="text/javascript">
-        fWindowLoad();
-    </script>
-
-    <div id="popup"></div>
-    <div id="oMenu"></div>
-
+<body>
+<div id="container">
+    <div id="game">
+        <div id="tz"></div>
+    </div>
+    <div id="chat">
+        <div id="chatMessages" class="scroll">
+        </div>
+        <form id="chatForm" onsubmit="event.preventDefault();SendMessage();">
+            <input id="chatFormMessage" placeholder="Сообщение в чат">
+            <button id="chatFormButton" type="submit">Написать</button>
+        </form>
+    </div>
+    <div id="location">
+        <div id="locationName">
+        </div>
+        <div id="locationUsers" class="scroll">
+        </div>
+    </div>
 </div>
+
+<script src="client.js"></script>
+<script type="text/javascript">
+    const customTitlebar = require('custom-electron-titlebar');
+
+    const titlebar = new customTitlebar.Titlebar({
+        backgroundColor: customTitlebar.Color.fromHex('#47413a')
+    });
+</script>
 
 </body>
 </html>
