- ui select fix - system messages fix - localhost server

--- a/game/autologin.html
+++ b/game/autologin.html
@@ -5,7 +5,7 @@
     <title>TimeZero - автовход</title>
     <link rel="stylesheet" href="client.css">
 </head>
-<body>
+<body class="noselect">
 <div id="autologinContainer">
     <div id="autologinUsers">
 
